tests/test_proof/bad/duration-empty.catala_en
## Test

```catala
declaration scope A:
  internal x content duration
  output y content boolean

scope A:
  definition x equals 94 day
  definition y under condition (x + x) > 100 day consequence equals true
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] [A.y] This variable might return an empty error:
┌─⯈ duration-empty.catala_en:6.10-6.11:
└─┐
6 │   output y content boolean
  │          ‾
  └─ Test
Counterexample generation is disabled so none was generated.
```
